--- a/byteshop/nbproject/private/private.properties
+++ b/byteshop/nbproject/private/private.properties
@@ -1,6 +1,7 @@
 auxiliary.org-netbeans-modules-projectapi.issue214819_5f_fx_5f_enabled=true
 # No need to modify this property unless customizing JavaFX Ant task infrastructure
 endorsed.javafx.ant.classpath=.
+file.reference.mysql-connector-java-8.0.30.jar-1=C:\\ConectorJavaMysql\\mysql-connector-java-8.0.30.jar
 javafx.run.inbrowser=<Default System Browser>
 javafx.run.inbrowser.path=C:\\Users\\Daniel\\AppData\\Local\\Programs\\Responsively-App\\ResponsivelyApp.exe
 user.properties.file=C:\\Users\\Daniel\\AppData\\Roaming\\NetBeans\\16\\build.properties
